Fixed Program Certificate Issue while Printing
While printing certificate it was adding blank page on chrome
browser. Also images were misaligned. To Fix these issues css
is modified in print media.

LEARNER-6696

--- a/credentials/apps/credentials_theme_openedx/static/sass/_layouts-rendering.scss
+++ b/credentials/apps/credentials_theme_openedx/static/sass/_layouts-rendering.scss
@@ -162,7 +162,8 @@
 
 .accomplishment-stamps {
   @extend %list-unstyled;
-
+  white-space: nowrap;
+  
   .accomplishment-stamp-platform {
     margin-bottom: 15px;
 
