--- a/credentials/static/sass/_print.scss
+++ b/credentials/static/sass/_print.scss
@@ -18,6 +18,28 @@
 }
 
 @media print {
+    .accomplishment-title {
+        margin: 0 !important;
+    }
+
+    .wrapper-accomplishment-statement {
+        padding: 35px 0 !important;
+    }
+
+    .accomplishment-signatories {
+        float: right;
+        width: auto
+    }
+    .accomplishment-statement {
+            float: left;
+        margin: 0 !important;
+    }
+
+    .wrapper-accomplishment-orgs {
+        float: right;
+        width: auto !important;
+        margin: 0 0 30px !important;
+    }
 
     // helpers
     %print-no-background {
